Finished second draft with corrections applied.

--- a/RAL/RAL_technical_report/refs.bib
+++ b/RAL/RAL_technical_report/refs.bib
@@ -5,6 +5,15 @@
     year      = "1962",
 }
 
+@article{mantid,
+    author    = "Mantid Project",
+    title     = "Mantid: Manipulation and Analysis Toolkit for Instrument Data",
+    year      = "2013",
+    doi  	  = "10.5286/SOFTWARE/MANTID",
+    url		  = "http://dx.doi.org/10.5286/SOFTWARE/MANTID"
+}
+
+
 @book{cwickens2004,
     author    = "C. D. Wickens and J. Lee and Y. D. Liu and S. Gordon-Becker",
     title     = "Introduction to Human Factors Engineering",
@@ -19,10 +28,20 @@
     publisher = "OUP Oxford",
 }
 
-@manual{wshowells2010,
+@techreport{wshowells2010,
     author  = "W.S. Howells and V. Garcia-Sakai and F. Demmel and  M.T.F. Telling and F. Fernandez-Alonso",
     title   = "MODES User Guide, Version 3",
     year    = "2010",
+    institution = "Rutherford Appleton Laboratory",
+    number	= "RAL-TR-2010-006",
+}
+
+@techreport{wshowells1996,
+	author = "W.S. Howells",
+	title  = "IDA - IRIS Data Analysis",
+	year	   = "1996",
+    institution = "Rutherford Appleton Laboratory",
+    number	= "RAL-TR-96-006",
 }
 
 @manual{wshowells1996,
@@ -32,14 +51,14 @@
 }
 
 @manual{pradaelli2000ariel,
-	author = "Paolo G. Radaelli",
+	author = "P. G. Radaelli",
 	title  = "ARIEL Manual",
 	year	   = "2000",
 }
 
 @article{higgins1977observation,
   title={Observation of quasi-elastic broadening in neutron scattering from polymer solutions},
-  author={Higgins, JS and Allen, G and Ghosh, RE and Howells, WS and Farnoux, B},
+  author={Higgins, J.S. and Allen, G. and Ghosh, R.E. and Howells, W.S. and Farnoux, B.},
   journal={Chemical Physics Letters},
   volume={49},
   number={2},
@@ -50,7 +69,7 @@
 
 @article{higgins1977q,
   title={Q 4-dependent broadening in quasielastic incoherent neutron scattering from a polymer melt},
-  author={Higgins, JS and Ghosh, RE and Howells, WS and Allen, Geoffrey},
+  author={Higgins, J.S. and Ghosh, R.E. and Howells, W.S. and Allen, G.},
   journal={Journal of the Chemical Society, Faraday Transactions 2: Molecular and Chemical Physics},
   volume={73},
   number={1},
@@ -61,7 +80,7 @@
 
 @article{wild1977measurement,
   title={Measurement and analysis of fluorescence decay curves},
-  author={Wild, Urs P and Holzwarth, Alfred R and Good, Hans P},
+  author={Wild, U.P. and Holzwarth, A.R. and Good, H.P.},
   journal={Review of Scientific Instruments},
   volume={48},
   number={12},
@@ -72,7 +91,7 @@
 
 @article{chudley1961neutron,
   title={Neutron scattering from a liquid on a jump diffusion model},
-  author={Chudley, CT and Elliott, RJ},
+  author={Chudley, C.T. and Elliott, R.J.},
   journal={Proceedings of the Physical Society},
   volume={77},
   number={2},
@@ -81,9 +100,18 @@
   publisher={IOP Publishing}
 }
 
+@book{fernandezalonso2013neutron,
+    author    = "Fernandez-Alonso, F. and Price, D. L.",
+    title     = "Neutron Scattering Fundermentals",
+    publisher = "Academic Press",
+    edition  = "1st",
+    year      = "2013",
+
+}
+
 @article{hall1981incoherent,
   title={Incoherent neutron scattering functions for random jump diffusion in bounded and infinite media},
-  author={Hall, Peter L and Ross, DK},
+  author={Hall, P.L. and Ross, D.K.},
   journal={Molecular Physics},
   volume={42},
   number={3},
@@ -94,7 +122,7 @@
 
 @article{teixeira1985experimental,
   title={Experimental determination of the nature of diffusive motions of water molecules at low temperatures},
-  author={Teixeira, Jos{\'e} and Bellissent-Funel, M-C and Chen, Sow-Hsin and Dianoux, Albert-Jos{\'e}},
+  author={Teixeira, J. and Bellissent-Funel, M.C. and Chen, S. and Dianoux, A.},
   journal={Physical Review A},
   volume={31},
   number={3},
@@ -105,7 +133,7 @@
 
 @article{fick1855v,
   title={V. On liquid diffusion},
-  author={Fick, Adolph},
+  author={Fick, A.},
   journal={The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
   volume={10},
   number={63},
@@ -123,10 +151,14 @@
 }
 
 @article{dssivia1992,
-	author 	= "D. S. Sivia and C. J. Carlile and W. S. Howells",
-	title	= "Bayesian analysis of quasielastic neutron scattering data",
-	journal	= "Physica B",
-	year		= "1992",
+  title={Bayesian analysis of quasielastic neutron scattering data},
+  author={Sivia, D.S. and Carlile, C.J. and Howells, W.S. and K{\"o}nig, S.},
+  journal={Physica B: Condensed Matter},
+  volume={182},
+  number={4},
+  pages={341--348},
+  year={1992},
+  publisher={Elsevier}
 }
 
 @incollection{hschober2009,
@@ -172,7 +204,7 @@
 
 @article{mayers2004vesuvio,
   title={VESUVIO - the double difference inverse geometry spectrometer at ISIS},
-  author={Mayers, J and Tomkinson, J and Abdul-Redah, T and Stirling, WG and Andreani, C and Senesi, R and Nardone, M and Colognesi, D and Degiorgi, E},
+  author={Mayers, J. and Tomkinson, J. and Abdul-Redah, T. and Stirling, W.G. and Andreani, C. and Senesi, R. and Nardone, M. and Colognesi, D. and Degiorgi, E.},
   journal={Physica B: Condensed Matter},
   volume={350},
   number={1},
@@ -181,15 +213,17 @@
   publisher={Elsevier}
 }
 
-@article{mayers2010user,
+@techreport{mayers2010user,
   title={User guide to VESUVIO data analysis},
-  author={Mayers, J},
-  year={2010}
+  author={Mayers, J.},
+  year={2010},
+  institution={Rutherford Appleton Laboratory UK},
+  number={RAL-TR-2011-003}
 }
 
 @article{colognesi2002tosca,
   title={TOSCA neutron spectrometer: the final configuration},
-  author={Colognesi, D and Celli, M and Cilloco, F and Newport, RJ and Parker, SF and Rossi-Albertini, V and Sacchetti, F and Tomkinson, J and Zoppi, M},
+  author={Colognesi, D. and Celli, M. and Cilloco, F. and Newport, R.J. and Parker, S.F. and Rossi-Albertini, V. and Sacchetti, F. and Tomkinson, J. and Zoppi, M.},
   journal={Applied Physics A},
   volume={74},
   number={1},
@@ -198,30 +232,33 @@
   publisher={Springer}
 }
 
-@manual{adams2001iris,
+@techreport{adams2001iris,
+  author={Garcia-Sakai, V. and Adams, M.A. and Howells, W.S. and Telling, M.T.F.},
   title={The IRIS user guide},
-  author={Adams, MA and Howells, WS and Telling, MTF},
-  year={2001},
-  organization={Rutherford Appleton Laboratory UK}
+  year={2011},
+  institution={Rutherford Appleton Laboratory UK},
+  number={RAL-TR-2011-004}
 }
 
-@manual{telling2008osiris,
+@techreport{telling2003osiris,
   title={The OSIRIS user guide},
-  author={Telling, MTF and Andersen, KH},
-  organization={Rutherford Appleton Laboratory},
-  year={2008}
+  author={Telling, M.T.F. and Andersen, K.H.},
+  institution={Rutherford Appleton Laboratory UK},
+  year={2003},
+  number={RAL-TR-2003-016}
 }
 
-@manual{parker2003tosca,
+@techreport{parker2003tosca,
   title={The TOSCA user manual},
-  author={SF Parker, J Tomkinson, A J Ramirez-Cuesta and D Colognesi},
-  organization={Rutherford Appleton Laboratory},
-  year={2003}
+  author={Parker, S.F. and Tomkinson, J. and Ramirez-Cuesta, A.J. and Colognesi, D.},
+  institution={Rutherford Appleton Laboratory UK},
+  year={2003},
+  number={RAL-TR-2003-015}
 }
 
 @article{mayers2011calibration,
   title={Calibration of an electron volt neutron spectrometer},
-  author={Mayers, J and Adams, MA},
+  author={Mayers, J. and Adams, M.A.},
   journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
   volume={625},
   number={1},
@@ -232,7 +269,7 @@
 
 @article{schooneveld2006foil,
   title={Foil cycling technique for the VESUVIO spectrometer operating in the resonance detector configuration},
-  author={Schooneveld, EM and Mayers, J and Rhodes, NJ and Pietropaolo, A and Andreani, C and Senesi, R and Gorini, G and Perelli-Cippo, E and Tardocchi, M},
+  author={Schooneveld, E.M. and Mayers, J. and Rhodes, N.J. and Pietropaolo, A. and Andreani, C. and Senesi, R. and Gorini, G. and Perelli-Cippo, E. and Tardocchi, M.},
   journal={Review of scientific instruments},
   volume={77},
   number={9},
