--- a/RAL/template.tex
+++ b/RAL/template.tex
@@ -6,7 +6,7 @@
 
 %%% Preamble
 \documentclass[paper=a4, fontsize=11pt]{scrartcl}	% Article class of KOMA-script with 11pt font and a4 format
-
+\usepackage[margin=0.7in]{geometry}
 \usepackage[english]{babel}															% English language/hyphenation
 \usepackage[protrusion=true,expansion=true]{microtype}				% Better typography
 \usepackage{amsmath,amsfonts,amsthm}										% Math packages
@@ -42,7 +42,6 @@
 \pagestyle{fancyplain}
 \fancyhead{}														% No page header
 \fancyfoot[C]{\thepage}										% Pagenumbering at center of footer
-\fancyfoot[R]{\small \texttt{HowToTeX.com}}	% You can remove/edit this line 
 \renewcommand{\headrulewidth}{0pt}				% Remove header underlines
 \renewcommand{\footrulewidth}{0pt}				% Remove footer underlines
 \setlength{\headheight}{13.6pt}
@@ -50,7 +49,13 @@
 %%% Equation and float numbering
 \numberwithin{equation}{section}															% Equationnumbering: section.eq#
 \numberwithin{figure}{section}																% Figurenumbering: section.fig#
-\numberwithin{table}{section}																% Tablenumbering: section.tab#
+\numberwithin{table}{section}
+
+\usepackage[parfill]{parskip}
+\usepackage{float}
+\usepackage{graphicx}
+\usepackage{hyperref}
+\usepackage[numbers]{natbib}															% Tablenumbering: section.tab#
 
 
 %%% Title	
@@ -64,11 +69,14 @@
         Random Department\\
         \texttt{email@example.com}
 }
-\date{}
+\date{\today}
 
 %%% Begin document
 \begin{document}
 \maketitle
+\clearpage
+\tableofcontents
+\clearpage
 \section{Heading on level 1 (section)}
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies 
 
