Checkpointing work on report.

--- a/RAL/vesuvio_report/references.bib
+++ b/RAL/vesuvio_report/references.bib
@@ -9,6 +9,14 @@
   publisher={IOP Publishing}
 }
 
+@techreport{mayers2010user,
+  title={User guide to VESUVIO data analysis},
+  author={Mayers, J.},
+  year={2010},
+  institution={Rutherford Appleton Laboratory UK},
+  number={RAL-TR-2011-003}
+}
+
 @article{mantid,
     author    = "Mantid Project",
     title     = "Mantid: Manipulation and Analysis Toolkit for Instrument Data",
@@ -37,6 +45,17 @@
   pages={E659--E662},
   year={2004},
   publisher={North-Holland}
+}
+
+@article{schooneveld2006foil,
+  title={Foil cycling technique for the VESUVIO spectrometer operating in the resonance detector configuration},
+  author={Schooneveld, E.M. and Mayers, J. and Rhodes, N.J. and Pietropaolo, A. and Andreani, C. and Senesi, R. and Gorini, G. and Perelli-Cippo, E. and Tardocchi, M.},
+  journal={Review of scientific instruments},
+  volume={77},
+  number={9},
+  pages={095103},
+  year={2006},
+  publisher={AIP Publishing}
 }
 
 @article{mayers2011calibration,
@@ -70,4 +89,47 @@
   pages={454--463},
   year={2002},
   publisher={North-Holland}
+}
+
+
+@article{schooneveld2006foil,
+  title={Foil cycling technique for the VESUVIO spectrometer operating in the resonance detector configuration},
+  author={Schooneveld, E.M. and Mayers, J. and Rhodes, N.J. and Pietropaolo, A. and Andreani, C. and Senesi, R. and Gorini, G. and Perelli-Cippo, E. and Tardocchi, M.},
+  journal={Review of scientific instruments},
+  volume={77},
+  number={9},
+  pages={095103},
+  year={2006},
+  publisher={AIP Publishing}
+}
+
+@article{seeger1985double,
+  title={Double-difference method to improve the resolution of an eV neutron spectrometer},
+  author={Seeger, PA and Taylor, AD and Brugger, RM},
+  journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume={240},
+  number={1},
+  pages={98--114},
+  year={1985},
+  publisher={Elsevier}
+}
+
+@book{fernandezalonso2013neutron,
+    author    = "Fernandez-Alonso, F. and Price, D. L.",
+    title     = "Neutron Scattering Fundermentals",
+    publisher = "Academic Press",
+    edition  = "1st",
+    year      = "2013",
+}
+
+@article{mayers2010user,
+  title={User guide to VESUVIO data analysis},
+  author={Mayers, J},
+  year={2010}
+}
+
+@misc{mantidgithubncs,
+  title = {Mantid Github Scripts Repository},
+  howpublished = {\url{https://github.com/mantidproject/scripts/tree/master/development/inelastic}},
+  note = {Accessed: 2014-08-11}
 }
